correciones del domain para que no tenga anotaciones y correccion de usecases